<?xml version="1.0" encoding="utf-8"?>
<!--FIXME: Various UI values are hardcoded for now like strings, text size, margin size, padding size, colors, etc-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeFormLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingTop="18dp"
    android:paddingEnd="18dp"
    android:paddingBottom="18dp"
    tools:context=".recipeFragments.forms.RecipeFormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="126dp"
                        android:layout_height="84dp"
                        android:clickable="true"
                        android:src="@android:drawable/ic_menu_gallery" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeFormTitleText"
                        android:layout_width="188dp"
                        android:layout_height="wrap_content"
                        android:text="Title"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/recipeFormTitleInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="Title of recipe"
                        android:inputType="text"
                        android:maxLength="100000"
                        android:minHeight="48dp"
                        android:textColorHint="#757575" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeFormPrepTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Preparation Time"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/recipeFormPrepTimeHourInput"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="46dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="0dp"
                        android:autofillHints=""
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="h"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/recipeFormPrepTimeHourText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="hour(s)"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/recipeFormPrepTimeMinuteInput"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="46dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="0dp"
                        android:autofillHints=""
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="m"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/recipeFormPrepTimeMinuteText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="minute(s)"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeFormCategoryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Category"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/recipeFormCategoryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="Select type of recipe"
                    android:ems="10"
                    android:entries="@array/recipe_categories"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ingredientFormAmountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Number of Servings"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/recipeFormNumServingInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:autofillHints=""
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="Number of servings for this recipe"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeFormCommentsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Comments"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/recipeFormCommentsInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="Add comments or directions"
                    android:inputType="text"
                    android:maxLength="100000"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recipeFormIngredientsText"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="Ingredients"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/recipeFormAddIngredientButton"
                        android:layout_width="61dp"
                        android:layout_height="match_parent"
                        app:icon="@android:drawable/ic_input_add" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeFormIngredientRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


            </LinearLayout>

            <Button
                android:id="@+id/recipeFormSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Save"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>