...

        <argument
            android:name="editedIngredient"
            app:argType="com.example.loops.models.Ingredient" />
    </fragment>
    <fragment
        android:id="@+id/addRecipeIngredientFormFragment"
        android:name="com.example.loops.recipeFragments.forms.AddRecipeIngredientFormFragment"
        android:label="Add a  recipe ingredient"
        tools:layout="@layout/fragment_ingredient_form">

    </fragment>
    <fragment
...
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/addIngredientToEditRecipeForm"
            app:destination="@id/addRecipeIngredientFormFragment" />
        <action
            android:id="@+id/action_editRecipeFormFragment_to_ingredientCollectionSelectionFragment"
            app:destination="@id/ingredientCollectionSelectionFragment" />
        <action
            android:id="@+id/action_editRecipeFormFragment_to_editRecipeIngredientFormFragment"
            app:destination="@id/editRecipeIngredientFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealPlanHomePageFragment"
...
        tools:layout="@layout/fragment_meal_plan_home_page" >
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_ingredientCollectionFragment"
            app:destination="@id/ingredientCollectionEditorFragment" />
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_recipeCollectionFragment"
            app:destination="@id/recipeCollectionEditorFragment" />
        <action
            android:id="@+id/action_mealPlanHomePageFragment_to_shoppingListFragment"
            app:destination="@id/shoppingListFragment" />
        <action
            android:id="@+id/action_look_at_meal_plan_detail"
            app:destination="@id/mealPlanFragment" />
...
            android:name="collectionType"
            app:argType="com.example.loops.factory.RecipeCollectionFactory$CollectionType"
            android:defaultValue="FROM_STORAGE_FOR_EDIT" />

        <action
            android:id="@+id/addRecipeFromCollection"
            app:destination="@id/addRecipeFormFragment" />
        <action
            android:id="@+id/action_recipeCollectionEditorFragment_to_mealPlanHomePageFragment"
            app:destination="@id/mealPlanHomePageFragment"
            app:popUpTo="@id/mealPlanHomePageFragment"
            app:popUpToInclusive="true" />
        <action
...
